tests/miniJava/neg/005222_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java this ( ) { return 0 ; } }
